# knowledge-hub

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEBASE_INDEX.md  Dockerfile  README.md  README_CN.md  SKILL.md  build.sh  docker-compose.yml  install_skill.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: docker-image.yml
.superpowers/sdd/: progress.md  task-12-report.md  task-13-report.md  task-4-report.md
.tokenmiser/: cache.json
data/: algorithm-design-patterns.md  c-best-practices.md
docs/superpowers/plans/: 2026-06-23-vector-rag-knowledge-hub-plan.md  (+4 more)
graphify-out/: .graphify_detect.json  .graphify_extract.json  .graphify_incremental.json  .graphify_old.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-23/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
graphify-out/2026-06-24/: .graphify_labels.json  cost.json  graph.json
graphify-out/2026-06-25/: .graphify_analysis.json  .graphify_labels.json
graphify-out/cache/: stat-index.json
scripts/: download-models.sh  pack-skill.sh
skill/: SKILL.md
skill/scripts/: upload.py
src/knowledge_hub/: config.py  schemas.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_health.py  test_integration.py  test_integration_upload.py  test_job_manager.py  test_loaders.py  test_mcp_server.py  test_metadata.py  test_pipeline.py  test_query_engine.py  test_reranker.py  test_schemas.py  test_tools.py  test_upload_server.py  test_vector_store.py
(+22 files in other folders)
