[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-hub"
version = "0.1.0"
description = "Local-first Vector RAG knowledge hub with MCP interface"
readme = "CLAUDE.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.0",
    "llama-index-readers-file>=0.3.0",
    "llama-index-embeddings-ollama>=0.4.0",
    "qdrant-client>=1.12.0",
    "fastmcp>=2.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "click>=8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.0",
]

[project.scripts]
kh = "knowledge_hub.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
